# crokit

./: .gitignore  .gn  BUILD.gn  DEPS  README.md
examples/: BUILD.gn  audio-manager-test.js  binding.js  bootstrap-test.js  call-test.js  conference-test.js  contact-test.js  controll-test.js  desktop-capture-test.js  hello.cc  hello_node.cc  index.html  main.js  package.json  renderer.js  schedule-test.js  test-utils.js  test.js  useragent-test.js  video-manager-test.js  ytms-test.js
v8/: BUILD.gn
yealink/libvc/: BUILD.gn
yealink/libvc/include/access/: access_agent.h  access_agent_api.h  access_define.h
yealink/libvc/include/avs/: av_api.h  av_call.h  av_define.h
yealink/libvc/include/chat/: chat_dialog.h  chat_manager.h  chat_message_item.h  chat_observer.h
yealink/libvc/include/components/http/: http_common_func.h  http_connection.h  http_download.h  http_factory.h
yealink/libvc/include/components/log/: log_api.h  log_define.h
yealink/libvc/include/components/test_util/: file_reader.h  gtest_util.h
yealink/libvc/include/contact/: cloud_contact_api.h  cloud_contact_msg.h  cloud_contact_type.h  local_contact_api.h
yealink/libvc/include/media/: media_api.h  media_call.h  media_capture.h  media_export.h  media_video_frame.h
yealink/libvc/include/meeting/: meeting.h  meeting_api.h  meeting_define.h
yealink/libvc/include/record/: record_api.h  record_define.h  record_storage.h
yealink/libvc/include/room/: room.h  room_controller.h  room_data.h  room_define.h  room_description_component.h  room_member.h  room_member_manager.h  room_message_item.h  room_observer.h  room_record_component.h  room_rtmp_component.h  room_state_component.h  room_view_component.h
yealink/libvc/include/schedule/: schedule.h  schedule_data.h  schedule_define.h  schedule_item.h  schedule_manager.h  schedule_observer.h  schedule_plan_info.h
yealink/libvc/include/sip_agent/: auth.h  connection.h  sip_agent.h  sip_agent_api.h  sip_agent_define.h  sip_client.h  sip_define.h  sip_invite_agent.h  sip_message_agent.h  sip_message_readonly.h  sip_observer.h  sip_service_agent.h  sip_subscription_agent.h
yealink/libvc/include/vset/: vset.h  vset_define.h  write_list.h
yealink/libvc/include/ytms/: ytms_agent.h  ytms_agent_api.h  ytms_define.h
yealink/libvc/x86/: ipvp.tune  vc_sdk_native.lib
yealink/libvc/x86/debug/: ipvp.ini  ipvp.tune  vc_sdk_native.lib
yealink/libvc/x86/release/: ipvp.ini  ipvp.tune  vc_sdk_native.lib
yealink/native_mate/: BUILD.gn  arguments.cc  arguments.h  constructor.h  converter.cc  converter.h  dictionary.cc  dictionary.h  function_template.cc  function_template.h  handle.h  key_weak_map.h  object_template_builder.cc  object_template_builder.h  persistent_dictionary.cc  persistent_dictionary.h  scoped_persistent.h  trackable_object.h  wrappable.cc  wrappable.h  wrappable_base.h
yealink/native_mate/converters/: callback.cc  callback.h  file_path_converter.h  gurl_converter.h  map_converter.h  once_callback.h  string16_converter.h  v8_value_converter.cc  v8_value_converter.h  value_converter.cc  value_converter.h
yealink/node/: BUILD.gn  node.gni  node_includes.h  win_delay_load_hook.cc
yealink/node/electron/: version
yealink/node/electron/x64/: node.lib
yealink/node/electron/x86/: node.lib
yealink/node/lib/: version
yealink/rtvc/: BUILD.gn
yealink/rtvc/api/: account_info.h  audio_manager.h  call.h  channel.h  channel_group.h  chat_channel.h  conference.h  conference_control.h  conference_desc.h  conference_record.h  conference_rtmp.h  conference_state.h  conference_user.h  conference_view.h  contact.h  device_type.h  focus_channel.h  macros.h  media_channel.h  rtc_session.h  rtvc_exports.h  schedule_item.h  share_channel.h  time_utils.h  unified_communication.h  user_agent.h  vc_exports.h  video_manager.h  ytms_info.h
yealink/rtvc/api/account/: account.h
yealink/rtvc/api/channel/: channel.h
yealink/rtvc/api/media/: media.h
yealink/rtvc/api/memory/: aligned_array.h  aligned_malloc.cc
yealink/rtvc/api/video/: i010_buffer.cc  i010_buffer.h  i420_buffer.cc  i420_buffer.h  video_frame.cc  video_frame.h  video_frame_buffer.cc  video_frame_buffer.h  video_rotation.h  video_sink.h  video_source.h
yealink/rtvc/binding/: BUILD.gn  audio_manager_binding.cc  audio_manager_binding.h  bootstrap_binding.cc  bootstrap_binding.h  call_binding.cc  call_binding.h  cloud_contact_binding.cc  cloud_contact_binding.h  conference_binding.cc  conference_binding.h  conference_chat_binding.cc  conference_chat_binding.h  conference_description_binding.cc  conference_description_binding.h  conference_dialog_binding.cc  conference_dialog_binding.h  conference_message_binding.cc  conference_message_binding.h  conference_record_binding.cc  conference_record_binding.h  conference_rtmp_binding.cc  conference_rtmp_binding.h  conference_state_binding.cc  conference_state_binding.h  conference_user_binding.cc  conference_user_binding.h  conference_users_binding.cc  conference_users_binding.h  conference_view_binding.cc  conference_view_binding.h  connector_binding.cc  connector_binding.h  contact_node_binding.cc  contact_node_binding.h  context.cc  context.h  converter.cc  converter.h  desktop_capture.cc  (+75 more)
yealink/rtvc/binding/lib/: account.ts  audio.ts  base-renderer.ts  bootstrap.ts  call.ts  channel.ts  conference.ts  contact.ts  desktop-capture.ts  index.ts  media.ts  schedule.ts  user-agent.ts  video.ts  webgl-renderer.ts  ytms.ts  yuv-renderer.ts
yealink/rtvc/glue/: struct_traits.cc  struct_traits.h
yealink/rtvc/lib/: audio_manager_impl.cc  audio_manager_impl.h  call_impl.cc  call_impl.h  channel_holder.cc  channel_holder.h  channel_impl.cc  channel_impl.h  chat_channel_impl.cc  chat_channel_impl.h  conference_impl.cc  conference_impl.h  focus_channel_impl.cc  focus_channel_impl.h  media_channel_impl.cc  media_channel_impl.h  rtc_session_impl.cc  rtc_session_impl.h  share_channel_imp.cc  share_channel_impl.h  unified_communication_impl.cc  unified_communication_impl.h  user_agent_impl.cc  user_agent_impl.h  video_manager_impl.cc  video_manager_impl.h
(+84 files in other folders)
