declare_args() {
  libvc_dir = "//yealink/libvc"
  libvc_file = "vc_sdk_native.lib"
}

config("libvc_header") {
  include_dirs = [
    libvc_dir + "/include",
  ]

  defines = []
}

config("libvc_config") {
  lib_dirs = []
  if (target_cpu == "x86") {
    if (is_debug) {
      lib_dirs += [ libvc_dir + "/x86" + "/debug" ]
    }
    else {
      lib_dirs += [ libvc_dir + "/x86" + "/release" ]
    }
  }
  else if (target_cpu == "x64") {
    if (is_debug) {
      lib_dirs += [ libvc_dir + "/x64" + "/debug" ]
    }
    else {
      lib_dirs += [ libvc_dir + "/x64" + "/release" ]
    }
  }

  libs = []
  libs += [ libvc_file ]
}

group("libvc") {
  public_configs = [
    ":libvc_header",
    ":libvc_config",
    # TODO
    # remove exceptions once libvc updated
    "//build/config/compiler:exceptions"
  ]
}
