import("//yealink/node/node.gni")

declare_args() {
  node_engine_include_dir = "deps/v8/include"
  node_root_dir = "//yealink/node/lib"
  node_lib_file = "node.lib"
}

config("node_lib_header") {
  include_dirs = [
    node_root_dir + "/include/node",
    node_root_dir + "/src",
    node_root_dir + "/deps/openssl/config",
    node_root_dir + "/deps/openssl/openssl/include",
    node_root_dir + "/deps/uv/include",
    node_root_dir + "/deps/zlib",
    node_root_dir + "/{{node_engine_include_dir}}",
  ]

  defines = [
    "USING_UV_SHARED=1",
    "USING_V8_SHARED=1",
    "V8_DEPRECATION_WARNINGS=1"
  ]
}

config("node_lib_config") {
  lib_dirs = []
  if (target_cpu == "x86") {
    lib_dirs += [ node_root_dir + "/x86" ]
  }
  else if (target_cpu == "x64") {
    lib_dirs += [ node_root_dir + "/x64" ]
  }

  libs = []
  libs += [ node_lib_file ]
}

group("node_lib") {
  public_configs = [
    ":node_lib_header",
    ":node_lib_config",
  ]
}
