import("//yealink/node/node.gni")

group("rtvc") {
  deps = [
    ":rtvc_binding",
    ":rtvc_lib",
  ]
}

source_set("rtvc_api") {
  sources = [
    "api/user_agent.h",
    "api/audio_manager.h",
    "api/video_manager.h",
    "api/video/video_frame_buffer.h",
    "api/video/video_frame_buffer.cc",
    "api/video/i420_buffer.h",
    "api/video/i420_buffer.cc",
    "api/video/i010_buffer.h",
    "api/video/i010_buffer.cc",
    "api/video/video_frame.h",
    "api/video/video_frame.cc",
    "api/video/video_rotation.h",
    "api/video/video_sink.h",
    "api/video/video_source.h",
  ]
  deps = [
    "//base",
    "//third_party/libyuv",
  ]
}

source_set("desktop_media") {
  sources = [
    "binding/desktop_media_id.h",
    "binding/desktop_media_id.cc",
    "binding/desktop_capture.h",
    "binding/desktop_capture.cc",
    "binding/desktop_media_list.h",
    "binding/desktop_media_list_observer.h",
    "binding/desktop_media_list_base.h",
    "binding/desktop_media_list_base.cc",
    "binding/native_desktop_media_list.h",
    "binding/native_desktop_media_list.cc",
  ]
  deps = [
    "//base",
    "//third_party/webrtc/modules/desktop_capture",
  ]
}

source_set("rtvc_lib") {
  sources = [
    "lib/user_agent_impl.h",
    "lib/user_agent_impl.cc",
    "lib/audio_manager_impl.h",
    "lib/audio_manager_impl.cc",
    "lib/video_manager_impl.h",
    "lib/video_manager_impl.cc",
  ]
  deps = [
    "//base",
    ":rtvc_api",
  ]
}

source_set("rtvc_glue") {
  sources = [
    "glue/struct_traits.h",
    "glue/struct_traits.cc",
  ]
  deps = [
    "//yealink/libvc",
    ":rtvc_api",
  ]
}

node_addon("rtvc_binding") {
  sources = [
    "binding/converter.h",
    "binding/converter.cc",
    "binding/context.h",
    "binding/context.cc",
    "binding/index.cc",
    "binding/null_task_runner.h",
    "binding/libuv_task_runner.h",
    "binding/libuv_task_runner.cc",
    "binding/uv_task_runner.h",
    "binding/uv_task_runner.cc",
    "binding/event_emitter.h",
    "binding/event_emitter.cc",
    "binding/event_emitter_caller.h",
    "binding/event_emitter_caller.cc",
    "binding/invoke_method.h",
    "binding/invoke_method.cc",
    "binding/promise.h",
    "binding/promise.cc",
    "binding/i420_buffer_binding.h",
    "binding/i420_buffer_binding.cc",
    "binding/video_frame_binding.h",
    "binding/video_frame_binding.cc",
    "binding/video_source_binding.h",
    "binding/video_source_binding.cc",
    "binding/video_source_adapter.h",
    "binding/video_source_adapter.cc",
    "binding/video_sink_v8.h",
    "binding/video_sink_v8.cc",
    "binding/video_source_v8.h",
    "binding/video_source_v8.cc",
    "binding/bootstrap_binding.h",
    "binding/bootstrap_binding.cc",
    "binding/user_agent_binding.h",
    "binding/user_agent_binding.cc",
    "binding/audio_manager_binding.h",
    "binding/audio_manager_binding.cc",
    "binding/video_manager_binding.h",
    "binding/video_manager_binding.cc",
  ]
  deps = [
    "//base",
    "//gin",
    "//yealink/libvc",
    "//yealink/native_mate",
    "//yealink/native_mate:converters",
    ":rtvc_lib",
    ":rtvc_glue",
    ":desktop_media",
  ]
}
