import("//yealink/node/node.gni")

group("rtvc") {
  deps = [
    ":rtvc_binding",
    ":rtvc_lib",
  ]
}

source_set("rtvc_api") {
  sources = [
    "api/user_agent.h",
    "api/contact.h",
    "api/schedule_item.h",
    "api/audio_manager.h",
    "api/video_manager.h",
    "api/video/video_frame_buffer.h",
    "api/video/video_frame_buffer.cc",
    "api/video/i420_buffer.h",
    "api/video/i420_buffer.cc",
    "api/video/i010_buffer.h",
    "api/video/i010_buffer.cc",
    "api/video/video_frame.h",
    "api/video/video_frame.cc",
    "api/video/video_rotation.h",
    "api/video/video_sink.h",
    "api/video/video_source.h",
  ]
  deps = [
    "//base",
    "//third_party/libyuv",
  ]
}

source_set("desktop_media") {
  sources = [
    "binding/desktop_media_id.h",
    "binding/desktop_media_id.cc",
    "binding/desktop_capture.h",
    "binding/desktop_capture.cc",
    "binding/desktop_media_list.h",
    "binding/desktop_media_list_observer.h",
    "binding/desktop_media_list_base.h",
    "binding/desktop_media_list_base.cc",
    "binding/native_desktop_media_list.h",
    "binding/native_desktop_media_list.cc",
  ]
  deps = [
    "//base",
    "//third_party/webrtc/modules/desktop_capture",
  ]
}

source_set("rtvc_lib") {
  sources = [
    "lib/user_agent_impl.h",
    "lib/user_agent_impl.cc",
    "lib/audio_manager_impl.h",
    "lib/audio_manager_impl.cc",
    "lib/video_manager_impl.h",
    "lib/video_manager_impl.cc",
  ]
  deps = [
    "//base",
    ":rtvc_api",
  ]
}

source_set("rtvc_glue") {
  sources = [
    "glue/struct_traits.h",
    "glue/struct_traits.cc",
  ]
  deps = [
    "//yealink/libvc",
    ":rtvc_api",
  ]
  if (is_clang) {
    configs -= [
      "//build/config/clang:find_bad_constructs",
      "//build/config/compiler:no_exceptions",
      "//build/config/compiler:chromium_code",
    ]
  }
}

node_addon("rtvc_binding") {
  sources = [
    "binding/converter.h",
    "binding/converter.cc",
    "binding/context.h",
    "binding/context.cc",
    "binding/index.cc",
    "binding/null_task_runner.h",
    "binding/libuv_task_runner.h",
    "binding/libuv_task_runner.cc",
    "binding/uv_task_runner.h",
    "binding/uv_task_runner.cc",
    "binding/event_emitter.h",
    "binding/event_emitter.cc",
    "binding/event_emitter_caller.h",
    "binding/event_emitter_caller.cc",
    "binding/invoke_method.h",
    "binding/invoke_method.cc",
    "binding/promise.h",
    "binding/promise.cc",
    "binding/key_weak_map.h",
    "binding/trackable_object.cc",
    "binding/trackable_object.h",
    "binding/i420_buffer_binding.h",
    "binding/i420_buffer_binding.cc",
    "binding/video_frame_binding.h",
    "binding/video_frame_binding.cc",
    "binding/video_source_binding.h",
    "binding/video_source_binding.cc",
    "binding/video_source_adapter.h",
    "binding/video_source_adapter.cc",
    "binding/video_sink_adapter.h",
    "binding/video_sink_adapter.cc",
    "binding/video_sink_v8.h",
    "binding/video_sink_v8.cc",
    "binding/video_source_v8.h",
    "binding/video_source_v8.cc",
    "binding/desktop_capture_binding.h",
    "binding/desktop_capture_binding.cc",
    "binding/bootstrap_binding.h",
    "binding/bootstrap_binding.cc",
    "binding/connector_binding.h",
    "binding/connector_binding.cc",
    "binding/user_agent_binding.h",
    "binding/user_agent_binding.cc",
    "binding/schedule_binding.h",
    "binding/schedule_binding.cc",
    "binding/schedule_item_binding.h",
    "binding/schedule_item_binding.cc",
    "binding/cloud_contact_binding.h",
    "binding/cloud_contact_binding.cc",
    "binding/local_contact_binding.h",
    "binding/local_contact_binding.cc",
    "binding/contact_node_binding.h",
    "binding/contact_node_binding.cc",
    "binding/sip_poller.h",
    "binding/sip_poller.cc",
    "binding/call_binding.h",
    "binding/call_binding.cc",
    "binding/conference_binding.h",
    "binding/conference_binding.cc",
    "binding/conference_chat_binding.h",
    "binding/conference_chat_binding.cc",
    "binding/conference_description_binding.h",
    "binding/conference_description_binding.cc",
    "binding/conference_dialog_binding.h",
    "binding/conference_dialog_binding.cc",
    "binding/conference_message_binding.h",
    "binding/conference_message_binding.cc",
    "binding/conference_record_binding.h",
    "binding/conference_record_binding.cc",
    "binding/conference_rtmp_binding.h",
    "binding/conference_rtmp_binding.cc",
    "binding/conference_view_binding.h",
    "binding/conference_view_binding.cc",
    "binding/conference_state_binding.h",
    "binding/conference_state_binding.cc",
    "binding/conference_user_binding.h",
    "binding/conference_user_binding.cc",
    "binding/conference_users_binding.h",
    "binding/conference_users_binding.cc",
    "binding/audio_manager_binding.h",
    "binding/audio_manager_binding.cc",
    "binding/video_manager_binding.h",
    "binding/video_manager_binding.cc",
    "binding/ytms_binding.h",
    "binding/ytms_binding.cc",
    "binding/ytms_process.h",
    "binding/ytms_process.cc",
  ]
  deps = [
    "//base",
    "//gin",
    "//yealink/libvc",
    "//yealink/native_mate",
    "//yealink/native_mate:converters",
    ":rtvc_lib",
    ":rtvc_glue",
    ":desktop_media",
    "//third_party/webrtc/modules/desktop_capture",
  ]
}
